# image-pro

./: .gitignore  CMakeLists.txt  README.md  app.js  bower.json  clean_history.sh  deploy.sh  package.json
boostrap/: boostrap.js
data/: questions.json  topics.json
model/: question.js  room.js  user.js
mongodb/: logic.js  mongo.js  mongodb.js
native/: README.md  compile.sh  compile_linux.sh  native.js  native_web.js
native/clib/: main.c  util_str.c
native/img_pro/: convert.sh  faceImg.h  faceimg.cpp  imgpro.js  imgpro_web.js  libfacedet.dylib  makefile  objects.mk  source.d  sources.mk  subdir.mk
oicmap/app/: app.js  constants.js
oicmap/app/home/: home.js  home.tpl.html
oicmap/app/home/notify/: notify.js  notify.tpl.html
oicmap/app/home/testimonials/: testimonials.tpl.html
oicmap/app/home/value/: value.js  value.tpl.html
oicmap/css/: font.css  responsive.css  social.home.app.css  testimonials.home.app.css
oicmap/resources/psd/: android.psd  mail.psd  oic-logo.psd
public/: index.html
public/faster5/: draw.html  faster5.js  script.js  style.css  style.less
public/javascripts/: layout.js
public/nodecpp/: appA.html  appB.html  ch01.html  ch02.html  ch03.html  ch04.html  ch05.html  ch06.html  ch07.html  ch08.html  end.html  front_matter.html  index.html
public/nodecpp/css/: style.css
public/oicmap/: index.html
public/oicmap/app/home/features/: features.js  features.tpl.html
public/oicmap/app/home/social/: social.js  social.tpl.html
public/oicmap/app/home/summary/: summary.js  summary.tpl.html
public/oicmap/app/home/testimonials/: testimonials.js
public/oicmap/app/nav/: nav.js  nav.tpl.html
public/oicmap/css/: features.home.app.css  main.css  notify.home.app.css  summary.home.app.css  value.home.app.css
public/oicmap/resources/psd/: logo_ios.psd  quote_2.psd  smartphone.psd
public/stylesheets/: color.less  reset.less  sprites.less  style.css  style.less
routes/: games.js  index.js  native.js
routes/auth/: logic.js
routes/faster5/: api.js  faster5.js  logic.js  socket.js
routes/games/: upndown.js
socket/: index.html  socket_web.js
utils/: file.js  log.js  time.js
views/: games.jade  index.jade  layout.jade  native.jade
views/faster5/: faster5.jade
views/games/: faster5.jade  upndown.jade
web/: app.js  bower.json  package.json
web/native/: compile.sh  compile_linux.sh  myLib.dylib  native.js  native_web.js
web/public/javascripts/: layout.js
web/routes/: native.js
web/views/: index.jade  layout.jade
