cmake_minimum_required(VERSION 3.5)
project(image_pro)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    bin/myLib.dylib
    bin/myLib.so
    bin/www
    bower_components/jquery/dist/core.js
    bower_components/jquery/dist/jquery.js
    bower_components/jquery/dist/jquery.min.js
    bower_components/jquery/dist/jquery.min.map
    bower_components/jquery/dist/jquery.slim.js
    bower_components/jquery/dist/jquery.slim.min.js
    bower_components/jquery/dist/jquery.slim.min.map
    bower_components/jquery/external/sizzle/dist/sizzle.js
    bower_components/jquery/external/sizzle/dist/sizzle.min.js
    bower_components/jquery/external/sizzle/dist/sizzle.min.map
    bower_components/jquery/external/sizzle/LICENSE.txt
    bower_components/jquery/src/ajax/var/location.js
    bower_components/jquery/src/ajax/var/nonce.js
    bower_components/jquery/src/ajax/var/rquery.js
    bower_components/jquery/src/ajax/jsonp.js
    bower_components/jquery/src/ajax/load.js
    bower_components/jquery/src/ajax/parseXML.js
    bower_components/jquery/src/ajax/script.js
    bower_components/jquery/src/ajax/xhr.js
    bower_components/jquery/src/attributes/attr.js
    bower_components/jquery/src/attributes/classes.js
    bower_components/jquery/src/attributes/prop.js
    bower_components/jquery/src/attributes/support.js
    bower_components/jquery/src/attributes/val.js
    bower_components/jquery/src/core/var/rsingleTag.js
    bower_components/jquery/src/core/access.js
    bower_components/jquery/src/core/DOMEval.js
    bower_components/jquery/src/core/init.js
    bower_components/jquery/src/core/parseHTML.js
    bower_components/jquery/src/core/ready-no-deferred.js
    bower_components/jquery/src/core/ready.js
    bower_components/jquery/src/core/support.js
    bower_components/jquery/src/css/var/cssExpand.js
    bower_components/jquery/src/css/var/getStyles.js
    bower_components/jquery/src/css/var/isHiddenWithinTree.js
    bower_components/jquery/src/css/var/rmargin.js
    bower_components/jquery/src/css/var/rnumnonpx.js
    bower_components/jquery/src/css/var/swap.js
    bower_components/jquery/src/css/addGetHookIf.js
    bower_components/jquery/src/css/adjustCSS.js
    bower_components/jquery/src/css/curCSS.js
    bower_components/jquery/src/css/hiddenVisibleSelectors.js
    bower_components/jquery/src/css/showHide.js
    bower_components/jquery/src/css/support.js
    bower_components/jquery/src/data/var/acceptData.js
    bower_components/jquery/src/data/var/dataPriv.js
    bower_components/jquery/src/data/var/dataUser.js
    bower_components/jquery/src/data/Data.js
    bower_components/jquery/src/deferred/exceptionHook.js
    bower_components/jquery/src/effects/animatedSelector.js
    bower_components/jquery/src/effects/Tween.js
    bower_components/jquery/src/event/ajax.js
    bower_components/jquery/src/event/alias.js
    bower_components/jquery/src/event/focusin.js
    bower_components/jquery/src/event/support.js
    bower_components/jquery/src/event/trigger.js
    bower_components/jquery/src/exports/amd.js
    bower_components/jquery/src/exports/global.js
    bower_components/jquery/src/manipulation/var/rcheckableType.js
    bower_components/jquery/src/manipulation/var/rscriptType.js
    bower_components/jquery/src/manipulation/var/rtagName.js
    bower_components/jquery/src/manipulation/_evalUrl.js
    bower_components/jquery/src/manipulation/buildFragment.js
    bower_components/jquery/src/manipulation/getAll.js
    bower_components/jquery/src/manipulation/setGlobalEval.js
    bower_components/jquery/src/manipulation/support.js
    bower_components/jquery/src/manipulation/wrapMap.js
    bower_components/jquery/src/queue/delay.js
    bower_components/jquery/src/traversing/var/dir.js
    bower_components/jquery/src/traversing/var/rneedsContext.js
    bower_components/jquery/src/traversing/var/siblings.js
    bower_components/jquery/src/traversing/findFilter.js
    bower_components/jquery/src/var/arr.js
    bower_components/jquery/src/var/class2type.js
    bower_components/jquery/src/var/concat.js
    bower_components/jquery/src/var/document.js
    bower_components/jquery/src/var/documentElement.js
    bower_components/jquery/src/var/fnToString.js
    bower_components/jquery/src/var/getProto.js
    bower_components/jquery/src/var/hasOwn.js
    bower_components/jquery/src/var/indexOf.js
    bower_components/jquery/src/var/ObjectFunctionString.js
    bower_components/jquery/src/var/pnum.js
    bower_components/jquery/src/var/push.js
    bower_components/jquery/src/var/rcssNum.js
    bower_components/jquery/src/var/rnotwhite.js
    bower_components/jquery/src/var/slice.js
    bower_components/jquery/src/var/support.js
    bower_components/jquery/src/var/toString.js
    bower_components/jquery/src/ajax.js
    bower_components/jquery/src/attributes.js
    bower_components/jquery/src/callbacks.js
    bower_components/jquery/src/core.js
    bower_components/jquery/src/css.js
    bower_components/jquery/src/data.js
    bower_components/jquery/src/deferred.js
    bower_components/jquery/src/deprecated.js
    bower_components/jquery/src/dimensions.js
    bower_components/jquery/src/effects.js
    bower_components/jquery/src/event.js
    bower_components/jquery/src/jquery.js
    bower_components/jquery/src/manipulation.js
    bower_components/jquery/src/offset.js
    bower_components/jquery/src/queue.js
    bower_components/jquery/src/selector-native.js
    bower_components/jquery/src/selector-sizzle.js
    bower_components/jquery/src/selector.js
    bower_components/jquery/src/serialize.js
    bower_components/jquery/src/traversing.js
    bower_components/jquery/src/wrap.js
    bower_components/jquery/AUTHORS.txt
    bower_components/jquery/bower.json
    bower_components/jquery/LICENSE.txt
    bower_components/jquery/README.md
    native/clib/main.c
    native/clib/util_str.c
    native/img_pro/convert.sh
    native/img_pro/imgpro.js
    native/img_pro/lib.so
    native/img_pro/libfacedet.a
    native/img_pro/libfacedet.dylib
    native/img_pro/makefile
    native/img_pro/objects.mk
    native/img_pro/source.d
    native/img_pro/source.o
    native/img_pro/sources.mk
    native/img_pro/subdir.mk
    native/compile.sh
    native/compile_linux.sh
    native/native.js
    native/native_web.js
    native/README.md
    node_modules/ffi/deps/libffi/config/freebsd/ia32/ffi.h
    node_modules/ffi/deps/libffi/config/freebsd/ia32/fficonfig.h
    node_modules/ffi/deps/libffi/config/freebsd/ia32/ffitarget.h
    node_modules/ffi/deps/libffi/config/freebsd/x64/ffi.h
    node_modules/ffi/deps/libffi/config/freebsd/x64/fficonfig.h
    node_modules/ffi/deps/libffi/config/freebsd/x64/ffitarget.h
    node_modules/ffi/deps/libffi/config/linux/arm/ffi.h
    node_modules/ffi/deps/libffi/config/linux/arm/fficonfig.h
    node_modules/ffi/deps/libffi/config/linux/arm/ffitarget.h
    node_modules/ffi/deps/libffi/config/linux/ia32/ffi.h
    node_modules/ffi/deps/libffi/config/linux/ia32/fficonfig.h
    node_modules/ffi/deps/libffi/config/linux/ia32/ffitarget.h
    node_modules/ffi/deps/libffi/config/linux/x64/ffi.h
    node_modules/ffi/deps/libffi/config/linux/x64/fficonfig.h
    node_modules/ffi/deps/libffi/config/linux/x64/ffitarget.h
    node_modules/ffi/deps/libffi/config/mac/ia32/ffi.h
    node_modules/ffi/deps/libffi/config/mac/ia32/fficonfig.h
    node_modules/ffi/deps/libffi/config/mac/ia32/ffitarget.h
    node_modules/ffi/deps/libffi/config/mac/x64/ffi.h
    node_modules/ffi/deps/libffi/config/mac/x64/fficonfig.h
    node_modules/ffi/deps/libffi/config/mac/x64/ffitarget.h
    node_modules/ffi/deps/libffi/config/solaris/ia32/ffi.h
    node_modules/ffi/deps/libffi/config/solaris/ia32/fficonfig.h
    node_modules/ffi/deps/libffi/config/solaris/ia32/ffitarget.h
    node_modules/ffi/deps/libffi/config/solaris/x64/ffi.h
    node_modules/ffi/deps/libffi/config/solaris/x64/fficonfig.h
    node_modules/ffi/deps/libffi/config/solaris/x64/ffitarget.h
    node_modules/ffi/deps/libffi/config/win/ia32/ffi.h
    node_modules/ffi/deps/libffi/config/win/ia32/fficonfig.h
    node_modules/ffi/deps/libffi/config/win/ia32/ffitarget.h
    node_modules/ffi/deps/libffi/config/win/x64/ffi.h
    node_modules/ffi/deps/libffi/config/win/x64/fficonfig.h
    node_modules/ffi/deps/libffi/config/win/x64/ffitarget.h
    node_modules/ffi/deps/libffi/include/ffi_common.h
    node_modules/ffi/deps/libffi/src/alpha/ffi.c
    node_modules/ffi/deps/libffi/src/alpha/ffitarget.h
    node_modules/ffi/deps/libffi/src/arm/ffi.c
    node_modules/ffi/deps/libffi/src/arm/ffitarget.h
    node_modules/ffi/deps/libffi/src/avr32/ffi.c
    node_modules/ffi/deps/libffi/src/avr32/ffitarget.h
    node_modules/ffi/deps/libffi/src/cris/ffi.c
    node_modules/ffi/deps/libffi/src/cris/ffitarget.h
    node_modules/ffi/deps/libffi/src/frv/ffi.c
    node_modules/ffi/deps/libffi/src/frv/ffitarget.h
    node_modules/ffi/deps/libffi/src/ia64/ffi.c
    node_modules/ffi/deps/libffi/src/ia64/ffitarget.h
    node_modules/ffi/deps/libffi/src/ia64/ia64_flags.h
    node_modules/ffi/deps/libffi/src/m32r/ffi.c
    node_modules/ffi/deps/libffi/src/m32r/ffitarget.h
    node_modules/ffi/deps/libffi/src/m68k/ffi.c
    node_modules/ffi/deps/libffi/src/m68k/ffitarget.h
    node_modules/ffi/deps/libffi/src/mips/ffi.c
    node_modules/ffi/deps/libffi/src/mips/ffitarget.h
    node_modules/ffi/deps/libffi/src/moxie/ffi.c
    node_modules/ffi/deps/libffi/src/pa/ffi.c
    node_modules/ffi/deps/libffi/src/pa/ffitarget.h
    node_modules/ffi/deps/libffi/src/powerpc/asm.h
    node_modules/ffi/deps/libffi/src/powerpc/ffi.c
    node_modules/ffi/deps/libffi/src/powerpc/ffi_darwin.c
    node_modules/ffi/deps/libffi/src/powerpc/ffitarget.h
    node_modules/ffi/deps/libffi/src/s390/ffi.c
    node_modules/ffi/deps/libffi/src/s390/ffitarget.h
    node_modules/ffi/deps/libffi/src/sh/ffi.c
    node_modules/ffi/deps/libffi/src/sh/ffitarget.h
    node_modules/ffi/deps/libffi/src/sh64/ffi.c
    node_modules/ffi/deps/libffi/src/sh64/ffitarget.h
    node_modules/ffi/deps/libffi/src/sparc/ffi.c
    node_modules/ffi/deps/libffi/src/sparc/ffitarget.h
    node_modules/ffi/deps/libffi/src/x86/ffi.c
    node_modules/ffi/deps/libffi/src/x86/ffi64.c
    node_modules/ffi/deps/libffi/src/x86/ffitarget.h
    node_modules/ffi/deps/libffi/src/closures.c
    node_modules/ffi/deps/libffi/src/debug.c
    node_modules/ffi/deps/libffi/src/dlmalloc.c
    node_modules/ffi/deps/libffi/src/java_raw_api.c
    node_modules/ffi/deps/libffi/src/prep_cif.c
    node_modules/ffi/deps/libffi/src/raw_api.c
    node_modules/ffi/deps/libffi/src/types.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/closure_fn0.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/closure_fn1.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/closure_fn2.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/closure_fn3.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/closure_fn4.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/closure_fn5.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/closure_fn6.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/closure_loc_fn0.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/closure_stdcall.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/closure_thiscall.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/cls_12byte.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/cls_16byte.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/cls_18byte.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/cls_19byte.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/cls_1_1byte.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/cls_20byte.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/cls_20byte1.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/cls_24byte.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/cls_2byte.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/cls_3_1byte.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/cls_3byte1.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/cls_3byte2.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/cls_4_1byte.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/cls_4byte.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/cls_5_1_byte.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/cls_5byte.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/cls_64byte.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/cls_6_1_byte.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/cls_6byte.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/cls_7_1_byte.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/cls_7byte.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/cls_8byte.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/cls_9byte1.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/cls_9byte2.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/cls_align_double.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/cls_align_float.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/cls_align_longdouble.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/cls_align_longdouble_split.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/cls_align_longdouble_split2.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/cls_align_pointer.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/cls_align_sint16.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/cls_align_sint32.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/cls_align_sint64.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/cls_align_uint16.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/cls_align_uint32.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/cls_align_uint64.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/cls_dbls_struct.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/cls_double.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/cls_double_va.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/cls_float.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/cls_longdouble.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/cls_longdouble_va.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/cls_multi_schar.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/cls_multi_sshort.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/cls_multi_sshortchar.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/cls_multi_uchar.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/cls_multi_ushort.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/cls_multi_ushortchar.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/cls_pointer.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/cls_pointer_stack.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/cls_schar.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/cls_sint.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/cls_sshort.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/cls_uchar.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/cls_uint.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/cls_ulonglong.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/cls_ushort.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/err_bad_abi.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/err_bad_typedef.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/fastthis1_win32.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/fastthis2_win32.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/fastthis3_win32.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/ffitest.h
    node_modules/ffi/deps/libffi/testsuite/libffi.call/float.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/float1.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/float2.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/float3.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/float4.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/float_va.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/huge_struct.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/many.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/many2.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/many2_win32.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/many_win32.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/negint.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/nested_struct.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/nested_struct1.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/nested_struct10.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/nested_struct2.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/nested_struct3.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/nested_struct4.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/nested_struct5.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/nested_struct6.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/nested_struct7.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/nested_struct8.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/nested_struct9.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/problem1.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/promotion.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/pyobjc-tc.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/return_dbl.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/return_dbl1.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/return_dbl2.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/return_fl.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/return_fl1.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/return_fl2.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/return_fl3.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/return_ldl.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/return_ll.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/return_ll1.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/return_sc.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/return_sl.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/return_uc.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/return_ul.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/stret_large.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/stret_large2.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/stret_medium.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/stret_medium2.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/strlen.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/strlen2_win32.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/strlen_win32.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/struct1.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/struct1_win32.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/struct2.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/struct2_win32.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/struct3.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/struct4.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/struct5.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/struct6.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/struct7.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/struct8.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/struct9.c
    node_modules/ffi/deps/libffi/testsuite/libffi.call/testclosure.c
    node_modules/ffi/deps/libffi/testsuite/libffi.special/ffitestcxx.h
    node_modules/ffi/deps/libffi/testsuite/libffi.special/unwindtest.cc
    node_modules/ffi/deps/libffi/testsuite/libffi.special/unwindtest_ffi_call.cc
    node_modules/ffi/deps/libffi/closure.c
    node_modules/ffi/deps/libffi/test.c
    node_modules/ffi/example/factorial/factorial.c
    node_modules/ffi/src/callback_info.cc
    node_modules/ffi/src/ffi.cc
    node_modules/ffi/src/ffi.h
    node_modules/ffi/src/threaded_callback_invokation.cc
    node_modules/ffi/src/win32-dlfcn.cc
    node_modules/ffi/src/win32-dlfcn.h
    node_modules/ffi/test/ffi_tests.cc
    node_modules/nan/nan.h
    node_modules/nan/nan_callbacks.h
    node_modules/nan/nan_callbacks_12_inl.h
    node_modules/nan/nan_callbacks_pre_12_inl.h
    node_modules/nan/nan_converters.h
    node_modules/nan/nan_converters_43_inl.h
    node_modules/nan/nan_converters_pre_43_inl.h
    node_modules/nan/nan_implementation_12_inl.h
    node_modules/nan/nan_implementation_pre_12_inl.h
    node_modules/nan/nan_maybe_43_inl.h
    node_modules/nan/nan_maybe_pre_43_inl.h
    node_modules/nan/nan_new.h
    node_modules/nan/nan_object_wrap.h
    node_modules/nan/nan_persistent_12_inl.h
    node_modules/nan/nan_persistent_pre_12_inl.h
    node_modules/nan/nan_string_bytes.h
    node_modules/nan/nan_typedarray_contents.h
    node_modules/nan/nan_weak.h
    node_modules/node-uuid/benchmark/benchmark-native.c
    node_modules/ref/src/binding.cc
    app.js)

add_executable(image_pro ${SOURCE_FILES})